--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.80.1/dist/phaser.min.js"></script>
     <script type="text/javascript" src="/scenes/globals.js"></script>
+    <script type="text/javascript" src="/scenes/quiz.js"></script>
     <script type="text/javascript" src="/scenes/aux_functions.js"></script>
     <script type="module" src="/scenes/config.js"></script>
     <script type="text/javascript" src="/lib/webrtc.js"></script>
+
 
     <!--script type="text/javascript" src="/lib/socket_io.js"></script>
     <script type="text/javascript" src="/lib/webserial.js"></script>
