--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
                 timing.push(el.time);
             })
             
-            console.log(timing);
+            // timing.forEach((el,idx) => {
+            //     // if(scoreBoardLap.idx['valid'] == )
+            // })
 
             
 
