view winner or lose

--- a/controls.html
+++ b/controls.html
@@ -547,23 +547,28 @@
             showAnswer()
         });
 
+
+        var resultGamer;
         Client.socket.on('receiveResults',function(data){
             //ENVIAR PARA PROBAR: Client.socket.emit('testTeams');
 
             console.log('recibiendo datos de resultados');
+            // console.log(data);
 
-            // localStorage.setItem('momentAnswer',true);
+
+            // localStorage.setItem('resultGamer',JSON.stringify(data));
+            resultGamer = data;
             // showAnswer()
         });
 
         
 
-        localStorage.clear();
-        // if(!localStorage.getItem('idTeam')){
-        //     Client.socket.emit('joinPlayer');
-        // }else{
-        //     receiveTeam();
-        // }
+        // localStorage.clear();
+        if(!localStorage.getItem('idTeam')){
+            Client.socket.emit('joinPlayer');
+        }else{
+            receiveTeam();
+        }
 
 
         var guild;
