ya casi esta ciclo y shuffle

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.80.1/dist/phaser.min.js"></script>
+    <!-- <script type="text/javascript" src="/lib/phaser.js"></script> -->
     <script type="text/javascript" src="/scenes/globals.js"></script>
     <script type="text/javascript" src="/scenes/quiz.js"></script>
     <script type="text/javascript" src="/scenes/aux_functions.js"></script>
@@ -139,8 +140,7 @@
         console.log("endgame");
         endGame();
     });
-    var scoreBoardLap = [];
-    var resultsGamers = [];
+
     Client.socket.on('receiveSolution',function(data){
         console.log("recibiendo respuesta");
         data.time = Date.now();
@@ -176,17 +176,20 @@
                 }
             })
             Client.socket.emit('sendResults',resultsGamers);
+            usersActive=[];
+            
+            console.log(usersActive);
         }
 
         // endGame();
     });
 
     var characterList = [];
-    Client.socket.on('selectedCharacter',function(data){
+    Client.socket.on('selectedCharacter',function(mono){
 
-        receiveMembers.push(data);
+        receiveMembers.push(mono);
         // characterList.push(data);
-        console.log(data);
+        console.log(mono, 'llegando para quedarse');
         //ENVIAR PARA PROBAR: Client.socket.emit('testTeams');
         // console.log("testTeams",data);
         // receiveTeam(data)
