--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                     }
                 }
             })
+            console.log(resultsGamers);
             Client.socket.emit('sendResults',resultsGamers);
         }
 
